fixed sidebar overflow and responsiveness

--- a/assets/css/customtheme.css
+++ b/assets/css/customtheme.css
@@ -3,6 +3,16 @@ body {
     background-image: url( ../images/composition-book-cover-tile-attrib-req-electric-eye-flickr.jpg);
 }
 
+nav.custom-sidebar, nav.custom-sidebar ul, nav.custom-sidebar ul li {
+    display: block;
+    overflow-wrap: break-word;
+}
+
+nav.custom-sidebar {
+    min-height: min-content;
+    max-height: 100vh;
+}
+
 .portfolio-body {
     background-color: #aaaaaa;
     background-image: url( ../images/lined_paper.png);
@@ -54,6 +64,7 @@ footer div {
 footer div.credits {
     text-align: justify;
     font-size: 14px;
+    line-height: 16px;
 }
 
 footer div.credits a, footer div.credits a:link, footer div.credits a:hover {
